--- a/wiki/PciCtr05.wiki
+++ b/wiki/PciCtr05.wiki
@@ -5,4 +5,51 @@ The hope is that this card can be used more easily than the national instruments
 A driver can be found here
 ftp://lx10.tx.ncsu.edu/pub/Linux/drivers
 
-Also pick up 60-mcc.rules from there.  Read the readme file carefully.  I'm going to try to install it on my workstation presently..
+Also pick up 60-mcc.rules from there.  Read the readme file.  I'm going to try to install it on my workstation presently..
+
+Install notes:
+copied the rules file.
+Updating rules: need to use new command because udevcontrol no longer exists.  instead:
+
+{{{
+udevadm control --reload-rules
+}}}
+
+To see if module is loaded:
+{{{
+cat /proc/modules | grep "ctr05"
+}}}
+
+Running the compiled test program fails...
+
+Check to make sure that the object got into the right directory
+
+{{{
+sudo update db
+locate ctr05 | grep "modules"
+}}}
+
+Should return many things, among them  /lib/modules/[uname -r]/kernel/drivers/char/ctr05.ko
+
+To check which modules are loaded:
+{{{
+modprobe -l | grep "ctr"
+}}}
+
+For me, this showed no loaded ctr05 module.  But, doing this
+{{{
+cd /lib/modules/[uname-r]
+sudo depmod
+sudo modprobe -v ctr05
+}}}
+
+Got the module onto /proc/modules   , showing up as -Live (P)  (not sure what these mean).
+
+But running the test program, I get this error:
+{{{
+greghale@jellyroll:~/drivers/pci-ctr05$ ./test-ctr05 
+/dev/ctr05/ctr0_01: No such file or directory
+error opening device /dev/ctr05/ctr0_01
+}}}
+
+Stuck at this point, writing up a superuser.stackexchange question.
