Notes on the successful install, finally.

--- a/wiki/PciCtr05.wiki
+++ b/wiki/PciCtr05.wiki
@@ -5,6 +5,14 @@ The hope is that this card can be used more easily than the national instruments
 A driver can be found here
 ftp://lx10.tx.ncsu.edu/pub/Linux/drivers
 
+Then click PCI, and the ctr05.tgz
+
+Alternatively (if you don't care about grabbing most recent):
+{{{
+ftp://lx10.tx.ncsu.edu/pub/Linux/drivers/PCI/PCI-CTR05.1.7.tgz
+}}}
+
+
 Also pick up 60-mcc.rules from there.  Read the readme file.  I'm going to try to install it on my workstation presently..
 
 Install notes:
@@ -12,44 +20,42 @@ copied the rules file.
 Updating rules: need to use new command because udevcontrol no longer exists.  instead:
 
 {{{
+cp 60-mcc.rules /etc/udev/rules.d/
 udevadm control --reload-rules
 }}}
 
-To see if module is loaded:
-{{{
-cat /proc/modules | grep "ctr05"
-}}}
-
-Running the compiled test program fails...
-
-Check to make sure that the object got into the right directory
+The LKM will compile, but the driver itself will silently not-compile, unless you change a line in c9513.c  .  So open up c9513.c in a text editor, and within the last #if block, after the warning (line 54 as of Oct12-2011) add the line:
 
 {{{
-sudo update db
-locate ctr05 | grep "modules"
+#include "c9513_2_26_29.c"
 }}}
 
-Should return many things, among them  /lib/modules/[uname -r]/kernel/drivers/char/ctr05.ko
+   These if blocks were put there to prevent people from installing the driver under a kernel too modern to be compatible with the calls made by the driver.  For now we will forgo this safety feature.  I tested the driver under 2.6.35-30 with no problems).
 
-To check which modules are loaded:
+
+Now:
+
 {{{
-modprobe -l | grep "ctr"
+sudo make
+sudo make install
 }}}
 
-For me, this showed no loaded ctr05 module.  But, doing this
+make install should give you 1 error only (and only the first time you run it:
+
 {{{
-cd /lib/modules/[uname-r]
-sudo depmod
-sudo modprobe -v ctr05
+/sbin/rmmod ctr05
+ERROR: Module ctr05 does not exist in /proc/modules
 }}}
 
-Got the module onto /proc/modules   , showing up as -Live (P)  (not sure what these mean).
+This is just due to a little thing in the Makefile, don't need to worry about it.
 
-But running the test program, I get this error:
+Now, assuming the card is plugged in, you should see something like this in your /proc/devices  file:
+
 {{{
-greghale@jellyroll:~/drivers/pci-ctr05$ ./test-ctr05 
-/dev/ctr05/ctr0_01: No such file or directory
-error opening device /dev/ctr05/ctr0_01
+cat /proc/devices | grep "ctr"
+TODO - find out exact output (working from home here)
 }}}
 
-Stuck at this point, writing up a superuser.stackexchange question.
+For me, after all this, running the test program that came with the driver works!
+
+Although it took a few days, due to me not noticing the kernel version restrictions.  If interested, I wrote up a [http://superuser.com/questions/344764/confusion-and-difficulty-using-a-pci-device-controlled-by-a-kernel-module question for stackexchange] about troubleshooting the issue.  May be a good read if you're having problems and want to see what dead-ends I tried.
